--- a/alertmanager-pubsub-service/Chart.yaml
+++ b/alertmanager-pubsub-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: alertmanager-pubsub-service
-description: A Helm chart for Kubernetes
+description: A Helm chart that creates a deployment that routes alerts from Alertmanager to a Pubsub topic
 
 # A chart can be either an 'application' or a 'library' chart.
 #
