--- a/alertmanager-webex-teams/Chart.yaml
+++ b/alertmanager-webex-teams/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: alertmanager-webex-teams
-description: A Helm chart for Kubernetes
+description: A Helm chart that creates a deployment to route alerts from Alertmanager to webex teams
 
 # A chart can be either an 'application' or a 'library' chart.
 #
