--- a/bigquery-exporter/Chart.yaml
+++ b/bigquery-exporter/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: bigquery-exporter
-description: A Helm chart for Kubernetes
+description: Helm chart that deploys https://github.com/m-lab/prometheus-bigquery-exporter
 
 # A chart can be either an 'application' or a 'library' chart.
 #
