--- a/gitlab-pipeline-monitoring/Chart.yaml
+++ b/gitlab-pipeline-monitoring/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: gitlab-pipeline-monitoring
-description: A Helm chart for Kubernetes
+description: A Helm chart that deploys a Gitlab pipeline monitoring microservice
 
 # A chart can be either an 'application' or a 'library' chart.
 #
