--- a/prometheus-rule/Chart.yaml
+++ b/prometheus-rule/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: 1.16.0
-description: A Helm chart for Kubernetes
+description: A Helm chart that creates prometheus rules
 name: prometheus-rule
 type: application
 version: 0.1.6
