--- a/sync-to-gcp/values.yaml
+++ b/sync-to-gcp/values.yaml
@@ -4,8 +4,9 @@
 
 replicaCount: 1
 
-command: [ "/bin/bash", "-c", "--" ]
-args: ["./sync-to-gcp", "--path=./test/test.txt", "--bucket=test-bucket-1234"]
+command: ["./sync-to-gcp", "--path=./test/test.txt", "--bucket=test-bucket-1234"]
+command: |-
+  ./sync-to-gcp --path=./test/test.txt --bucket=test-bucket-1234
 
 # used to mount a gcp service account json key to the pod
 gcp_credentials:
