fix: sd exporter helm chart

--- a/stackdriver-exporter/templates/deployment.yaml
+++ b/stackdriver-exporter/templates/deployment.yaml
@@ -26,9 +26,11 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       volumes:
+      {{- if .Values.gcp_credentials.secretName }}
       - name: credentials
         secret:
-          secretName: {{ .Values.secretName }}
+          secretName: {{ .Values.gcp_credentials.secretName }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -36,8 +38,10 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
+          {{- if .Values.gcp_credentials.secretName }}
           - name: credentials
             mountPath: "/var/secrets/gcp/credentials"
+          {{- end }}
           args:
           - '--google.project-id={{ .Values.project_id }}'
           - '--monitoring.metrics-type-prefixes={{ join "," .Values.metrics }}'
@@ -46,8 +50,10 @@ spec:
 #          - '--monitoring.metrics-interval={{ .Values.stackdriverScrape }}'
 #          - '--monitoring.metrics-offset={{ .Values.stackdriverOffset }}'
           env:
+          {{- if .Values.gcp_credentials.secretName }}
           - name: GOOGLE_APPLICATION_CREDENTIALS
             value: /var/secrets/gcp/credentials/account.json
+          {{- end }}
           - name: STACKDRIVER_EXPORTER_MONITORING_METRICS_TYPE_PREFIXES
             value: '{{ join "," .Values.metrics }}'
           - name: STACKDRIVER_EXPORTER_GOOGLE_PROJECT_ID
