--- a/sync-to-gcp/values.yaml
+++ b/sync-to-gcp/values.yaml
@@ -24,11 +24,6 @@ gcp_credentials:
   # if vault is available with approle auth method and roleset integration to gcp
   # will dynamically mount and rotate service account json file to the pod
   vault:
-    image: 
-      repository: vault
-      tag: 1.13.3
-      pullPolicy: IfNotPresent
-
     enable_vault_agent: true
     secret: "a-k8s-secret" # should have role_id="a-vault-role-id" secret_id="a-vault-secret-id" in the secret data
     vault_addr: https://vault.company.com
@@ -40,6 +35,7 @@ image:
   repository: ghcr.io/ammilam/sync-to-gcp
   pullPolicy: IfNotPresent
   tag: latest
+  vault: vault:1.13.3
 
 imagePullSecrets: []
 nameOverride: ""
